--- a/src/components/toggle-button/toggle-button.css
+++ b/src/components/toggle-button/toggle-button.css
@@ -1,28 +1,43 @@
 :host {
   display: block;
+  cursor: pointer;
+  border-radius: 500px;
 }
  :host([hidden]) { display: none }
 
-.toggle-circle {
-  width: 15px;
-  height: 15px;
-  border-radius: 100%;
-  background-color: blue;
-  position: absolute;
-}
-.off {
-  left: 0;
-}
-.on {
-  right: 0;
-}
-.toggle-circle-container {
+ .toggle-circle-container {
   display: flex;
   align-items: center;
-  width: 30px;
-  height: 17px;
+  width: 50px;
+  height: 27px;
   border-radius: 500px;
-  background-color: white;
   border: 1px solid blue;
-  position: relative;
+}
+.toggle-circle-container.on {
+  background-color: blue;
+}
+.toggle-circle-container.off {
+  background-color: white;
+}
+.toggle-circle-container.disabled {
+  background-color: #CCC;
+  border-color: #333;
+}
+
+.toggle-circle {
+  width: 25px;
+  height: 25px;
+  border-radius: 100%;
+  transition: transform 0.1s ease;
+}
+.off .toggle-circle {
+  background-color: blue;
+  transform: translateX(2px);
+}
+.on .toggle-circle {
+  background-color: white;
+  transform: translateX(24px);
+}
+.disabled .toggle-circle {
+  background-color: #666;
 }
