--- a/src/components/radio-button/radio-button.css
+++ b/src/components/radio-button/radio-button.css
@@ -1,3 +1,44 @@
-::slotted(input) {
-  display: none;
+:root {
+  --radio-default: #c2c2c2;
+  --radio-blue: #029fff;
+}
+:host {
+  display: block;
+  cursor: pointer;
+}
+input[type="radio"] {
+  opacity: 0;
+  position: absolute;
+}
+#radio {
+  display: inline-block;
+  border-radius: 100%;
+  box-shadow: inset 0 0 0 1px var(--radio-default);
+}
+#radio.small {
+  height: 14px;
+  width: 14px;
+}
+#radio.medium {
+  height: 18px;
+  width: 18px;
+}
+#radio.large {
+  height: 22px;
+  width: 22px;
+}
+input[type=radio]:focus + label {
+  outline: rgba(77, 97, 171, 0.5) auto 3px;
+}
+input[type=radio]:focus + #radio {
+  box-shadow: inset 0 0 0 2px var(--radio-blue);
+}
+#radio.checked {
+  box-shadow: inset 0 0 0 5px var(--radio-blue);
+}
+input[type=radio]:focus + #radio.checked {
+  box-shadow:
+    inset 0 0 0 5px var(--radio-blue),
+    0 0 0 1px white,
+    0 0 0 2px var(--radio-blue);
 }
