--- a/src/components/radio-button/radio-button.css
+++ b/src/components/radio-button/radio-button.css
@@ -2,43 +2,70 @@
   --radio-default: #c2c2c2;
   --radio-blue: #029fff;
 }
-:host {
-  display: block;
+erik-radio-button,
+erik-radio-button > label {
   cursor: pointer;
 }
 input[type="radio"] {
   opacity: 0;
   position: absolute;
+  z-index: -1;
 }
 #radio {
   display: inline-block;
   border-radius: 100%;
   box-shadow: inset 0 0 0 1px var(--radio-default);
+  outline: none;
 }
+
+/* Small (Default) */
 #radio.small {
   height: 14px;
   width: 14px;
 }
+#radio.small.checked {
+  box-shadow: inset 0 0 0 5px var(--radio-blue);
+}
+#radio.small.checked:focus,
+input[type=radio]:focus + #radio.small.checked {
+  outline: none;
+  box-shadow:
+    inset 0 0 0 5px var(--radio-blue),
+    0 0 0 1px white,
+    0 0 0 3px var(--radio-blue);
+}
+
+/* Medium */
 #radio.medium {
   height: 18px;
   width: 18px;
 }
+#radio.medium.checked {
+  box-shadow: inset 0 0 0 6px var(--radio-blue);
+}
+#radio.medium.checked:focus,
+input[type=radio]:focus + #radio.medium.checked {
+  outline: none;
+  box-shadow:
+    inset 0 0 0 6px var(--radio-blue),
+    0 0 0 1px white,
+    0 0 0 3px var(--radio-blue);
+}
+
+/* Large */
 #radio.large {
   height: 22px;
   width: 22px;
 }
-input[type=radio]:focus + label {
-  outline: rgba(77, 97, 171, 0.5) auto 3px;
+#radio.large.checked {
+  box-shadow: inset 0 0 0 7px var(--radio-blue);
 }
-input[type=radio]:focus + #radio {
-  box-shadow: inset 0 0 0 2px var(--radio-blue);
-}
-#radio.checked {
-  box-shadow: inset 0 0 0 5px var(--radio-blue);
-}
-input[type=radio]:focus + #radio.checked {
+#radio.large.checked:focus,
+input[type=radio]:focus + #radio.large.checked {
+  outline: none;
   box-shadow:
-    inset 0 0 0 5px var(--radio-blue),
+    inset 0 0 0 7px var(--radio-blue),
     0 0 0 1px white,
-    0 0 0 2px var(--radio-blue);
+    0 0 0 3px var(--radio-blue);
 }
+
