Using CSS Grid and Flex magic to align things up properly

--- a/src/components/radio-group/radio-group.css
+++ b/src/components/radio-group/radio-group.css
@@ -1,7 +1,9 @@
 :host {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(0, max-content));
+  grid-gap: 15px;
 }
 :host([vertical]) {
-  display: flex;
-  flex-direction: column;
+  grid-template-columns: 1fr;
+  grid-gap: 10px;
 }
