--- a/src/components/radio-button/radio-button.css
+++ b/src/components/radio-button/radio-button.css
@@ -2,6 +2,10 @@
   --radio-default: #c2c2c2;
   --radio-blue: #029fff;
 }
+erik-radio-button {
+  display: flex;
+  align-items: center;
+}
 erik-radio-button,
 erik-radio-button > label {
   cursor: pointer;
@@ -16,6 +20,7 @@ input[type="radio"] {
   border-radius: 100%;
   box-shadow: inset 0 0 0 1px var(--radio-default);
   outline: none;
+  margin-right: 7px;
 }
 
 /* Small (Default) */
