--- a/src/components/radio-button/radio-button.css
+++ b/src/components/radio-button/radio-button.css
@@ -1,19 +1,7 @@
-:root {
-  --radio-default: #c2c2c2;
-  --radio-blue: #029fff;
-}
-erik-radio-button {
+:host {
   display: flex;
   align-items: center;
-}
-erik-radio-button,
-erik-radio-button > label {
   cursor: pointer;
-}
-input[type="radio"] {
-  opacity: 0;
-  position: absolute;
-  z-index: -1;
 }
 #radio {
   display: inline-block;
@@ -31,8 +19,7 @@ input[type="radio"] {
 #radio.small.checked {
   box-shadow: inset 0 0 0 5px var(--radio-blue);
 }
-#radio.small.checked:focus,
-input[type=radio]:focus + #radio.small.checked {
+:host([focused]) #radio.small.checked {
   outline: none;
   box-shadow:
     inset 0 0 0 5px var(--radio-blue),
@@ -48,8 +35,7 @@ input[type=radio]:focus + #radio.small.checked {
 #radio.medium.checked {
   box-shadow: inset 0 0 0 6px var(--radio-blue);
 }
-#radio.medium.checked:focus,
-input[type=radio]:focus + #radio.medium.checked {
+:host([focused]) #radio.medium.checked {
   outline: none;
   box-shadow:
     inset 0 0 0 6px var(--radio-blue),
@@ -65,8 +51,7 @@ input[type=radio]:focus + #radio.medium.checked {
 #radio.large.checked {
   box-shadow: inset 0 0 0 7px var(--radio-blue);
 }
-#radio.large.checked:focus,
-input[type=radio]:focus + #radio.large.checked {
+:host([focused]) #radio.large.checked {
   outline: none;
   box-shadow:
     inset 0 0 0 7px var(--radio-blue),
