--- a/src/components/radio-button/radio-button.css
+++ b/src/components/radio-button/radio-button.css
@@ -21,6 +21,23 @@ label {
   box-shadow: inset 0 0 0 1px var(--radio-default);
 }
 
+/* Extra Small */
+:host([scale=xsmall]) #radio {
+  height: 12px;
+  width: 12px;
+}
+:host([scale=xsmall][checked]) #radio,
+:host(:hover[scale=xsmall][checked][disabled]) #radio {
+  box-shadow: inset 0 0 0 4px var(--radio-blue);
+}
+:host(:hover[scale=xsmall][checked]) #radio,
+:host([scale=xsmall][focused]) #radio {
+  box-shadow:
+    inset 0 0 0 4px var(--radio-blue),
+    0 0 0 1px white,
+    0 0 0 3px var(--radio-blue);
+}
+
 /* Small (Default) */
 :host([scale=small]) #radio {
   height: 14px;
@@ -28,46 +45,46 @@ label {
 }
 :host([scale=small][checked]) #radio,
 :host(:hover[scale=small][checked][disabled]) #radio {
-  box-shadow: inset 0 0 0 5px var(--radio-blue);
+  box-shadow: inset 0 0 0 4px var(--radio-blue);
 }
 :host(:hover[scale=small][checked]) #radio,
 :host([scale=small][focused]) #radio {
   box-shadow:
-    inset 0 0 0 5px var(--radio-blue),
+    inset 0 0 0 4px var(--radio-blue),
     0 0 0 1px white,
     0 0 0 3px var(--radio-blue);
 }
 
 /* Medium */
 :host([scale=medium]) #radio {
-  height: 18px;
-  width: 18px;
+  height: 16px;
+  width: 16px;
 }
 :host([scale=medium][checked]) #radio,
 :host(:hover[scale=medium][checked][disabled]) #radio {
-  box-shadow: inset 0 0 0 6px var(--radio-blue);
+  box-shadow: inset 0 0 0 5px var(--radio-blue);
 }
 :host(:hover[scale=medium][checked]) #radio,
 :host([scale=medium][focused]) #radio {
   box-shadow:
-    inset 0 0 0 6px var(--radio-blue),
+    inset 0 0 0 5px var(--radio-blue),
     0 0 0 1px white,
     0 0 0 3px var(--radio-blue);
 }
 
 /* Large */
 :host([scale=large]) #radio {
-  height: 22px;
-  width: 22px;
+  height: 18px;
+  width: 18px;
 }
 :host([scale=large][checked]) #radio,
 :host(:hover[scale=large][checked][disabled]) #radio {
-  box-shadow: inset 0 0 0 7px var(--radio-blue);
+  box-shadow: inset 0 0 0 6px var(--radio-blue);
 }
 :host(:hover[scale=large][checked]) #radio,
 :host([scale=large][focused]) #radio {
   box-shadow:
-    inset 0 0 0 7px var(--radio-blue),
+    inset 0 0 0 6px var(--radio-blue),
     0 0 0 1px white,
     0 0 0 3px var(--radio-blue);
 }
